# ragintel

./: .gitignore  .pre-commit-config.yaml  0.10.2  1.0.0  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  ragintel-mamba-env.yaml  repo.sh  tox.ini  versions.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
0.1.0.dev/: 404.html  index.html
0.1.0.dev/api/: index.html
0.1.0.dev/authors/: index.html
0.1.0.dev/contributing/: index.html
0.1.0.dev/history/: index.html
0.1.0.dev/installation/: index.html
0.1.0.dev/search/: search_index.json
0.1.0.dev/usage/: index.html
docs/: api.md  installation.md  usage.md
legacy/: html_loader.py  openai_capec_agent.py
notebooks/experimental/embedchain/: pyproject-embedchain.toml
notebooks/threat-hunt/: environment.yml
open-webui/: docker-compose.yaml
ragintel/: __init__.py
src/ragintel/: __init__.py  cli.py
src/ragintel/agents/: openai_interactor.py
src/ragintel/config/: detection_repo_sources.yaml
src/ragintel/databases/: opensearchdb.py
src/ragintel/eideons/chains/: mitre_tram.py  openai_threat_summarizer.py
src/ragintel/loaders/: base.py  config_loader.py  html_loader.py
src/ragintel/nodes/detections/: __init__.py  kql_node.py  sigma_node.py
src/ragintel/processors/: html_processor.py  multiparser.py  text_splitter.py
src/ragintel/stolons/runners/: mitre_tram.py  openai_threat_summarizer.py
src/ragintel/stolons/templates/: __init__.py
src/ragintel/templates/: pydantinc_intel_base.py
src/ragintel/tools/: chromadb_tools.py  github_loader.py  html_processor.py  kuzudb_tools.py  mitre_capec_tools.py  multiparser.py  opensearchdb_tools.py  sigma_loader.py
src/ragintel/tools/archivers/chroma/: __init__.py  base.py
src/ragintel/tools/archivers/kuzudb/: __init__.py
src/ragintel/tools/archivers/opensearch/: __init__.py  base.py
src/ragintel/tools/interactors/mitre/: __init__.py
src/ragintel/tools/loaders/github/: __init__.py  base.py
src/ragintel/tools/loaders/html/: __init__.py  base.py
src/ragintel/tools/loaders/kql_gen/: __init__.py  base.py
src/ragintel/tools/loaders/mitre/: __init__.py  base.py
src/ragintel/tools/loaders/multi/: __init__.py  base.py
src/ragintel/tools/loaders/sigma/: __init__.py  base.py
src/ragintel/utils/: config_loader.py  directory_manager.py  file_loader.py  ollama_embedding_chroma.py  text_splitter.py
src/ragintel/utils/adaptors/chroma/: __init__.py  ollama_embedding_chroma.py
src/ragintel/utils/adaptors/pydantic/: __init__.py  pydantic_adaptor.py
src/ragintel/utils/base/: __init__.py  config_loader.py  llamaindex_doc_dedup.py
src/ragintel/utils/enums/: __init__.py  embedder_enum.py
tests/: __init__.py  test_app.py  test_html_processor.py
