[tool]
[tool.poetry]
name = "ragintel"
version = "0.1.0"
homepage = "https://github.com/darkquasar/ragintel"
description = "Repo for testing new hunt and intel ideas with RAG."
authors = ["Diego Perez <darkquasar7@gmail.com>"]
readme = "README.md"
license =  "BSD-3-Clause"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "ragintel" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.7"

black  = { version = "^23.12.0", optional = true}
isort  = { version = "5.10.1", optional = true}
flake8  = { version = "4.0.1", optional = true}
flake8-docstrings = { version = "^1.7.0", optional = true }
pytest  = { version = "^7.4.3", optional = true}
pytest-cov  = { version = "^4.1.0", optional = true}
tox  = { version = "^3.27.1", optional = true}
mkdocs  = { version = "^1.5.3", optional = true}
mkdocs-include-markdown-plugin  = { version = "^6.0.4", optional = true}
mkdocs-material  = { version = "^9.5.2", optional = true}
mkdocstrings  = { version = "^0.18.0", optional = true}
mkdocs-material-extensions  = { version = "^1.3.1", optional = true}
twine  = { version = "^4.0.2", optional = true}
mkdocs-autorefs = {version = "^0.3.1", optional = true}
pre-commit = {version = "^3.6.0", optional = true}
toml = {version = "^0.10.2", optional = true}
livereload = {version = "^2.6.3", optional = true}
pyreadline = {version = "^2.1", optional = true}
mike = { version="^2.0.0", optional=true}
mypy = {version = "^1.7.1", optional = true}
setuptools = {version="^69.0.2", optional = true}
pkginfo = {version="^1.9.6", optional = true}
virtualenv = {version="^20.25.0", optional = true}

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov"
    ]

dev = [
    "pre-commit",
    "twine",
    "toml",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "mypy"
    ]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extensions",
    "mkdocs-autorefs",
    "mike",
    "setuptools",
    "pkginfo",
    "virtualenv"
    ]

[tool.poetry.scripts]
ragintel = 'ragintel.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.history
)/
'''

[tool.isort]
profile = "black"
